--- a/LECTURE14.Rmd
+++ b/LECTURE14.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Example: parameterizing a PVA model"
 author: "NRES 470/670"
-date: "Mar 26, 2018"
+date: "Spring 2019"
 output: 
   html_document: 
     theme: spacelab
