--- a/LECTURE15.Rmd
+++ b/LECTURE15.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Parameterizing models: estimation!"
 author: "NRES 470/670"
-date: "Apr 20, 2018"
+date: "Spring 2019"
 output: 
   html_document: 
     theme: spacelab
