--- a/LECTURE9.Rmd
+++ b/LECTURE9.Rmd
@@ -89,9 +89,9 @@ When we talked about [Allee effects](LECTURE5.html), we saw a case in which a de
 
 However, the MVP concept derived from *conservation biology* and not from theoretical population biology. Conservation biology deals with real-world systems which are messy, variable and uncertain. Therefore, the MVP concept is usually quantified using stochastic population models.  
 
-The most satisfying general definition of MVP (in my opinion) directly relates to the extinction vortex concept: Minimum Viable Population size is that *population size above which the extinction vortex can be safely averted*.
+The most satisfying general definition of MVP (in my opinion) directly relates to the extinction vortex concept: Minimum Viable Population size (MVP) is that *population size above which the extinction vortex can be safely averted*.
 
-However, the above definition is not strictly quantifiable. Also MVP is often defined in relation to population models, many of which don't have an explicit genetic component (becuase we often don't know exactly how many deleterious recessive alleles are in a population!). The quantitative, operational definition that we will use in this class is:
+However, the above definition is not strictly quantifiable. Also MVP is often defined in relation to population models, many of which don't have an explicit genetic component (becuase we often don't know exactly how many deleterious recessive alleles are in a population!). The quantitative, operational definition that we will use in this course is:
 
 > _MVP: the initial abundance threshold below which the risk of extinction over a specified time period (e.g., 50 years) exceeds a specified threshold (e.g., 10%)_
 
