--- a/FINAL_PROJECTS.Rmd
+++ b/FINAL_PROJECTS.Rmd
@@ -61,9 +61,10 @@ Your inital parameterized PVA will consist of:
 
 1. A ready-to-run PVA model, in whatever software framework you are using (Vortex, InsightMaker, R). This model does not need to be the "final" model, but it should work (e.g., produce results) and the parameter estimates should be reasonable and backed by evidence (see below).
 
-2. A description of parameter estimates and rationale/evidence for these estimates. 
-    a. For each major decision you made in constructing the model, describe the information you used to back up your decision (and the source of this information). Decisions include: how many populations, how many stages, how density-dependence operates for your species, allee effects, survival and fecundity rates, environmental stochasticity, catastrophes, etc. Where appropriate, feel free to embed figures, maps, etc. from your information sources.
-    b. Literature cited (format not important, as long as it includes all key information).
+2. A written rationale/evidence for each of your parameter estimates and other key modeling decisions.       
+    a. For each major decision you made in constructing the model, describe the information you used to back up your decision (and the source(s) of this information). Decisions include: how many populations, initial abundance(s), how many stages, how density-dependence operates for your species (e.g., which vital rates are density-dependent), Allee effects, survival and fecundity rates, environmental stochasticity, catastrophes, etc. Where appropriate, feel free to embed figures, maps, etc. from your information sources.
+    b. What scenarios do you plan to test (e.g., management scenarios, climate change, harvest, etc), and how will these scenarios help you to address your research questions?
+    c. Literature cited (format not important, as long as it includes all key information).        
     
 ## Third project-related assignment: the written project (rough draft)!
 
